--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,10 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: wasm32-unknown-unknown
-
+          
+      - name: Add rust-src
+        run: rustup component add rust-src --toolchain stable
+        
       - name: Check and test
         run: |
           cargo fmt --all --check
